# dawtracker

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: build.yml  test.yml
cmake/: warnings_clang.cmake  warnings_gcc.cmake  warnings_msvc.cmake
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/app/: App.cpp  App.h
src/app/src/: AppCtx.cpp  AppCtx.h  AppEnv.cpp  AppEnv.h  AppState.h  AppUI.cpp  AppUI.h  Dialog.h  UIState.h
src/app_main/: CMakeLists.txt  app_main.entitlements
src/app_main/src/: app_main.cpp  main.cpp
src/audio/: CMakeLists.txt
src/audio/audio/: AudioEngine.cpp  AudioEngine.h  AudioIO.cpp  AudioIO.h
src/audio/src/: utility.cpp  utility.h
src/common/: CMakeLists.txt
src/common/common/: AppState.cpp  AppState.h  AudioClip.cpp  AudioClip.h  Id.cpp  Id.h  MetronomeGenerator.cpp  MetronomeGenerator.h  ReactiveStateEngine.cpp  ReactiveStateEngine.h  RecordingBuffer.cpp  RecordingBuffer.h  audiodevicetypes.h  common.h  msg.h  std.h  uistate.cpp  uistate.h
src/experiments/: CMakeLists.txt
src/experiments/audiodevicemanager/: CMakeLists.txt  audiodevicemanager_main.cpp  pch.h
src/experiments/rse/: CMakeLists.txt  rse_main.cpp
src/platform/: CMakeLists.txt
src/platform/platform/: AppClock.cpp  AppClock.h  AppMsgQueue.cpp  AppMsgQueue.h  Msg.h  MsgQueue.cpp  MsgQueue.h  SDL.cpp  SDL.h  platform.cpp  platform.h
src/ui/: CMakeLists.txt
src/ui/src/: pch.h
src/ui/ui/: UI.cpp  UI.h  UIState.cpp  UIState.h
